Fixed the Jabber CLI.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@172 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/jabber-cli/pom.xml
+++ b/modules/jabber-cli/pom.xml
@@ -9,26 +9,32 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jabber-cli</artifactId>
     <packaging>jsb</packaging>
-    <name>Elastic Grid :: Jabber CLI</name>
+    <name>Modules :: Jabber CLI</name>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.jivesoftware.smack</groupId>
-            <artifactId>smack</artifactId>
-            <version>3.0.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jivesoftware.smack</groupId>
-            <artifactId>smackx</artifactId>
-            <version>3.0.4</version>
-        </dependency>
 
         <dependency>
             <groupId>com.elasticgrid</groupId>
             <artifactId>elastic-grid-core</artifactId>
             <version>${pom.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.elasticgrid</groupId>
+            <artifactId>elastic-grid-cli</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jivesoftware</groupId>
+            <artifactId>smack</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jivesoftware</groupId>
+            <artifactId>smackx</artifactId>
+            <version>3.0.4</version>
         </dependency>
 
         <dependency>
