UI config options
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@173 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/amazon-ec2-platform/config/ui.config
+++ b/platforms/amazon-ec2-platform/config/ui.config
@@ -1,3 +1,5 @@
 org.rioproject.tools.ui {
     waitMessage="Waiting to discover the Elastic Grid ...";
+    title="Elastic Grid Management Console";
+    bannerIcon="org/rioproject/tools/ui/images/Elastic-Grid-Logo.png";
 }
