EG branding on the UI.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@174 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/private-lan-platform/config/ui.config
+++ b/platforms/private-lan-platform/config/ui.config
@@ -1,3 +1,5 @@
 org.rioproject.tools.ui {
     waitMessage="Waiting to discover the Elastic Grid ...";
+    title="Elastic Grid Management Console";
+    bannerIcon="com/elasticgrid/tools/ui/Elastic-Grid-Logo.png";
 }
