config options for about box
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@176 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/amazon-ec2-platform/config/ui.config
+++ b/platforms/amazon-ec2-platform/config/ui.config
@@ -2,4 +2,8 @@ org.rioproject.tools.ui {
     waitMessage="Waiting to discover the Elastic Grid ...";
     title="Elastic Grid Management Console";
     bannerIcon="com/elasticgrid/tools/ui/Elastic-Grid-Logo.png";
+    aboutIcon="com/elasticgrid/tools/ui/Elastic-Grid-Logo.png";
+    aboutInfo="Elastic Grid<br>Management Console<br>";
+    build="Early Access";
+    version="0.8.2";
 }
