--- a/platforms/private-lan-platform/config/ui.config
+++ b/platforms/private-lan-platform/config/ui.config
@@ -2,4 +2,8 @@ org.rioproject.tools.ui {
     waitMessage="Waiting to discover the Elastic Grid ...";
     title="Elastic Grid Management Console";
     bannerIcon="com/elasticgrid/tools/ui/Elastic-Grid-Logo.png";
+    aboutIcon="com/elasticgrid/tools/ui/Elastic-Grid-Logo.png";
+    aboutInfo="Elastic Grid<br>Management Console<br>";
+    build="Early Access";
+    version="0.8.2";
 }
