--- a/platforms/private-lan-platform/config/ui.config
+++ b/platforms/private-lan-platform/config/ui.config
@@ -5,5 +5,5 @@ org.rioproject.tools.ui {
     aboutIcon="com/elasticgrid/tools/ui/Elastic-Grid-Logo.png";
     aboutInfo="Elastic Grid<br>Management Console<br>";
     build="Early Access";
-    version="0.8.2";
+    version="${pom.version}";
 }
