--- a/modules/elastic-grid-model/pom.xml
+++ b/modules/elastic-grid-model/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
-            <version>4.0-SNAPSHOT</version>
+            <version>4.0-M2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
