--- a/modules/elastic-grid-ui/pom.xml
+++ b/modules/elastic-grid-ui/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.rioproject.tools</groupId>
             <artifactId>cli</artifactId>
-            <version>4.0-SNAPSHOT</version>
+            <version>4.0-M2-SNAPSHOT</version>
         </dependency>
 
         <!-- Spring dependencies -->
