--- a/modules/private-lan-provisioner/pom.xml
+++ b/modules/private-lan-provisioner/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
-            <version>4.0-SNAPSHOT</version>
+            <version>4.0-M2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
