git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@179 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/maven-plugins/maven-rio-plugin/pom.xml
+++ b/maven-plugins/maven-rio-plugin/pom.xml
@@ -34,12 +34,12 @@
         <repository>
             <id>elastic-grid</id>
             <name>Elastic Grid Repository</name>
-            <url>scp://maven.elastic-grid.com/Library/WebServer/Sites/maven.elastic-grid.com</url>
+            <url>scp://elastic-grid.com/home/55056/domains/maven.elastic-grid.com/html</url>
         </repository>
 		<snapshotRepository>
             <id>elastic-grid</id>
             <name>Elastic Grid Repository</name>
-            <url>scp://maven.elastic-grid.com/Library/WebServer/Sites/maven.elastic-grid.com</url>
+            <url>scp://elastic-grid.com/home/55056/domains/maven.elastic-grid.com/html</url>
         </snapshotRepository>
         <!--<site>-->
             <!--<id>website</id>-->
