Updated to use Rio 4.0-M2 SNAPSHOTs insteads.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@184 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/maven-plugins/maven-rio-plugin/pom.xml
+++ b/maven-plugins/maven-rio-plugin/pom.xml
@@ -199,7 +199,7 @@
     </build>
 
 	<properties>
-		<rio-version>4.0-M1</rio-version>
+		<rio-version>4.0-M2-SNAPSHOT</rio-version>
 	</properties>
 
     <reporting>
