Updated Groovy to version 1.6-RC-1.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@193 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-core/pom.xml
+++ b/modules/elastic-grid-core/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>1.6-beta-2</version>
+            <version>1.6-RC-1</version>
         </dependency>
 
         <!-- Object/XML mapping dependencies -->
