Refactored EG configuration.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@195 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -14,10 +14,17 @@
 
     <dependencies>
 
-        <!-- Elastic Cluster manager -->
+        <!-- Elastic Grid manager -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-manager</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
+        <!-- Elastic Gruid core -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-core</artifactId>
             <version>${pom.version}</version>
         </dependency>
 
