EG-42: Added support for s3:// URLs.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@202 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -57,6 +57,13 @@
             <version>1.0.4</version>
         </dependency>
 
+        <!-- Amazon S3 integration -->
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
+            <version>0.6.1</version>
+        </dependency>
+
         <!-- Jini 2.1 dependencies -->
         <dependency>
             <groupId>net.jini</groupId>
