EG-48: Initial work on a S3OARDeployHandler.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@206 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -82,7 +82,13 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
-            <version>4.0-M2-SNAPSHOT</version>
+            <version>4.0-M3-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>monitor</artifactId>
+            <version>4.0-M3-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -164,7 +170,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-rio-plugin</artifactId>
-                <version>4.0-M2-SNAPSHOT</version>
+                <version>4.0-M3-SNAPSHOT</version>
                 <extensions>true</extensions>
                 <configuration>
                     <environment>
