--- a/platforms/amazon-ec2-platform/config/monitor.config
+++ b/platforms/amazon-ec2-platform/config/monitor.config
@@ -1,12 +1,16 @@
 /*
  * Configuration for a Provision Monitor
  */
+import java.io.File;
 import java.util.logging.ConsoleHandler;
 import java.util.logging.Level;
 import org.rioproject.core.ClassBundle;
 import org.rioproject.log.LoggerConfig;
 import org.rioproject.log.LoggerConfig.LogHandlerConfig;
 import org.rioproject.fdh.FaultDetectionHandlerFactory;
+import org.rioproject.monitor.DeployHandler;
+import org.rioproject.monitor.FileSystemOARDeployHandler;
+import com.elasticgrid.platforms.ec2.monitor.S3OARDeployHandler;
 
 /* --------------------------------------------------------------------------
  * Declare Provision Monitor properties
@@ -47,7 +51,14 @@ org.rioproject.monitor {
         new LoggerConfig("net.jini.lookup.JoinManager", Level.OFF)
     };
 
-    static prefix = "org.rioproject.fdh";
+    /* Configure DeployHandlers for the Monitor to use */
+    // TODO: make sure the S3 bucket is parameterized
+    deployMonitorPeriod = 30000;
+    deployDir = "${RIO_HOME}/deploy";
+    deployHandlers = new DeployHandler[] {
+                            new FileSystemOARDeployHandler(new File(deployDir))
+                            new S3OARDeployHandler("elastic-grid-drop-target", new File(deployDir))
+    };
     
     /* Configure a FaultDetectionHandler for the ProvisionMonitor */
     fdh = "org.rioproject.fdh.HeartbeatFaultDetectionHandler";
