EG's monitor configuration.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@212 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/platforms/amazon-ec2-platform/config/monitor.config
+++ b/platforms/amazon-ec2-platform/config/monitor.config
@@ -56,7 +56,7 @@ org.rioproject.monitor {
     deployMonitorPeriod = 30000;
     deployDir = "${RIO_HOME}/deploy";
     deployHandlers = new DeployHandler[] {
-                            new FileSystemOARDeployHandler(new File(deployDir))
+                            new FileSystemOARDeployHandler(new File(deployDir)),
                             new S3OARDeployHandler("elastic-grid-drop-target", new File(deployDir))
     };
     
