--- a/platforms/private-lan-platform/config/monitor.config
+++ b/platforms/private-lan-platform/config/monitor.config
@@ -48,7 +48,13 @@ org.rioproject.monitor {
                           new LogHandlerConfig[] {
                               new LogHandlerConfig(new ConsoleHandler())
                           }),
-        new LoggerConfig("net.jini.lookup.JoinManager", Level.OFF)
+        new LoggerConfig("net.jini.lookup.JoinManager", Level.OFF),
+        new LoggerConfig("com.elasticgrid.platforms.ec2.monitor",
+                          Level.FINE,
+                          false,
+                          new LogHandlerConfig[] {
+                              new LogHandlerConfig(new ConsoleHandler())
+                          })
     };
 
     /* Configure DeployHandlers for the Monitor to use */
@@ -56,7 +62,8 @@ org.rioproject.monitor {
     deployMonitorPeriod = 30000;
     deployDir = "${RIO_HOME}/deploy";
     deployHandlers = new DeployHandler[] {
-                            new FileSystemOARDeployHandler(new File(deployDir))
+                            new FileSystemOARDeployHandler(new File(deployDir)),
+                            // TODO: does it makes sense to use this DeployHandler in the private LAN platform?
                             new S3OARDeployHandler("elastic-grid-drop-target", new File(deployDir))
     };
     
