Fixed start of services with classpath isolations. Flatten lib/elastic-grid/** into lib/elastic-grid.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@221 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -243,6 +243,20 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <index>true</index>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <addExtensions/>
+                            <!--<classpathPrefix>../../kernel</classpathPrefix>-->
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
