--- a/platforms/private-lan-platform/config/rest-api.config
+++ b/platforms/private-lan-platform/config/rest-api.config
@@ -38,12 +38,18 @@ com.elasticgrid.rest {
                          ),
         };
 
-    static prefix = "org.rioproject.fdh";
-    /* Configure a FaultDetectionHandler for the ProvisionMonitor */
+    /* Configure a FaultDetectionHandler for the Cybernode */
     fdh = "org.rioproject.fdh.HeartbeatFaultDetectionHandler";
-    configArg = new String[]{"-",
-                             fdh+".heartbeatPeriod=10000",
-                             fdh+".heartbeatGracePeriod=10000"
-    };
-    faultDetectionHandler = FaultDetectionHandlerFactory.getClassBundle(fdh, configArg);
+    /* Point to this configuration file */
+    configFile = "${EG_HOME}/config/rest-api.config";
+    faultDetectionHandler =
+        FaultDetectionHandlerFactory.getClassBundle(fdh, configFile);
+}
+
+/* --------------------------------------------------------------------------
+ * Declare HeartbeatFaultDetectionHandler properties
+ * --------------------------------------------------------------------------*/
+org.rioproject.fdh.HeartbeatFaultDetectionHandler {
+    heartbeatPeriod=10000;
+    heartbeatGracePeriod=10000;
 }
