--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -35,97 +35,54 @@
             <version>${pom.version}</version>
         </dependency>
 
-        <!-- Amazon EC2 dependencies -->
+        <!-- Typica dependencies -->
         <dependency>
-            <groupId>com.xerox.amazonws</groupId>
+            <groupId>com.google.code.typica</groupId>
             <artifactId>typica</artifactId>
-            <version>1.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.1.6</version>
         </dependency>
-        <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.0.4</version>
-        </dependency>
-
         <!-- Amazon S3 integration -->
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
             <artifactId>jets3t</artifactId>
-            <version>0.6.1</version>
         </dependency>
 
         <!-- Jini 2.1 dependencies -->
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-lib</artifactId>
-            <version>2.1</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
-            <version>2.1</version>
-            <scope>provided</scope>
         </dependency>
 
-        <!-- Rio 4.0 dependencies -->
+        <!-- Rio dependencies -->
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
-            <version>4.0-M3-SNAPSHOT</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>monitor</artifactId>
-            <version>4.0-M3-SNAPSHOT</version>
-            <scope>provided</scope>
         </dependency>
 
         <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
-            <version>2.5.5</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>2.5.5</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Tests dependencies -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>5.8</version>
-            <classifier>jdk15</classifier>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <version>2.4</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymockclassextension</artifactId>
-            <version>2.4</version>
-            <scope>test</scope>
-        </dependency>
+        </dependency>        
 
     </dependencies>
 
