--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -110,7 +110,19 @@
             </dependency>
             <dependency>
                 <groupId>org.rioproject</groupId>
+                <artifactId>boot</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.rioproject</groupId>
                 <artifactId>monitor</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.rioproject.tools</groupId>
+                <artifactId>cli</artifactId>
                 <version>4.0-M3-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
@@ -127,6 +139,12 @@
                 <version>2.1</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>com.sun.jini</groupId>
+                <artifactId>tools</artifactId>
+                <version>2.1</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- Spring dependencies -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -139,6 +157,34 @@
                 <artifactId>spring-test</artifactId>
                 <version>2.5.5</version>
                 <scope>test</scope>
+            </dependency>
+            <!-- Object/XML mapping dependencies -->
+            <dependency>
+                <groupId>org.jibx</groupId>
+                <artifactId>jibx-run</artifactId>
+                <version>1.1.6a</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>stax</groupId>
+                        <artifactId>stax-api</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.jibx</groupId>
+                <artifactId>jibx-extras</artifactId>
+                <version>1.1.6a</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.stream</groupId>
+                <artifactId>stax-api</artifactId>
+                <version>1.0-2</version>
+            </dependency>
+            <!-- Various utilities -->
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>1.5.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
