--- a/substrates/pom.xml
+++ b/substrates/pom.xml
@@ -21,6 +21,55 @@
 	    <!--<module>apache</module>-->
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <!-- Rio dependencies -->
+            <dependency>
+                <groupId>org.rioproject</groupId>
+                <artifactId>rio</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.rioproject</groupId>
+                <artifactId>boot</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.rioproject</groupId>
+                <artifactId>monitor</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.rioproject.tools</groupId>
+                <artifactId>cli</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+            <!-- Jini 2.1 dependencies -->
+            <dependency>
+                <groupId>net.jini</groupId>
+                <artifactId>jsk-lib</artifactId>
+                <version>2.1</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.jini</groupId>
+                <artifactId>jsk-platform</artifactId>
+                <version>2.1</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.jini</groupId>
+                <artifactId>tools</artifactId>
+                <version>2.1</version>
+                <scope>provided</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <!-- Groovy dependencies -->
         <dependency>
