Refactored Maven dependencies so that it's easier to update versions used.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@227 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/substrates/tomcat6/pom.xml
+++ b/substrates/tomcat6/pom.xml
@@ -24,6 +24,11 @@
             <version>${pom.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
+        </dependency>
+
         <!-- Elastic Grid Core -->
         <dependency>
             <groupId>com.elasticgrid</groupId>
