--- a/modules/elastic-grid-ui/pom.xml
+++ b/modules/elastic-grid-ui/pom.xml
@@ -31,6 +31,10 @@
             <groupId>org.rioproject.tools</groupId>
             <artifactId>cli</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
+        </dependency>
 
         <!-- Spring dependencies -->
         <dependency>
