Refactored Maven dependencies so that it's easier to update versions used.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@229 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/jabber-cli/pom.xml
+++ b/modules/jabber-cli/pom.xml
@@ -41,6 +41,11 @@
             <groupId>org.rioproject.tools</groupId>
             <artifactId>cli</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
+        </dependency>
         
     </dependencies>
 
