Refactored Maven dependencies so that it's easier to update versions used.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@230 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/examples/video-conversion/web/pom.xml
+++ b/examples/video-conversion/web/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.tapestry</groupId>
             <artifactId>tapestry-core</artifactId>
             <version>${tapestry-release-version}</version>
