--- a/examples/video-conversion/client/pom.xml
+++ b/examples/video-conversion/client/pom.xml
@@ -22,7 +22,11 @@
         <dependency>
             <groupId>org.rioproject.tools</groupId>
             <artifactId>cli</artifactId>
-            <version>4.0-M3-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
         </dependency>
 
         <dependency>
