--- a/examples/video-conversion/converter/pom.xml
+++ b/examples/video-conversion/converter/pom.xml
@@ -31,6 +31,11 @@
             <version>${pom.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
+        </dependency>
+
         <!-- Various dependencies -->
         <dependency>
             <groupId>commons-io</groupId>
