--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -21,10 +21,10 @@
 
     <reporting>
         <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>cobertura-maven-plugin</artifactId>-->
+            <!--</plugin>-->
 
             <plugin>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>1.6-RC-1</version>
+            <version>1.6-RC-3</version>
             <scope>provided</scope>
         </dependency>
         <!-- Tests dependencies -->
