--- a/modules/elastic-grid-core/pom.xml
+++ b/modules/elastic-grid-core/pom.xml
@@ -14,11 +14,11 @@
     <dependencies>
 
         <!-- Elastic Grid Utilities -->
-        <dependency>
-            <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-utils</artifactId>
-            <version>${pom.version}</version>
-        </dependency>        
+        <!--<dependency>-->
+            <!--<groupId>${pom.groupId}</groupId>-->
+            <!--<artifactId>elastic-grid-utils</artifactId>-->
+            <!--<version>${pom.version}</version>-->
+        <!--</dependency>        -->
 
         <!-- Rio dependencies -->
         <dependency>
@@ -28,10 +28,6 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.rioproject</groupId>
-            <artifactId>monitor</artifactId>
         </dependency>
         <dependency>
             <groupId>com.sun.jini</groupId>
@@ -48,35 +44,15 @@
             <artifactId>jsk-platform</artifactId>
         </dependency>
 
-        <!-- Object/XML mapping dependencies -->
-        <dependency>
-            <groupId>org.jibx</groupId>
-            <artifactId>jibx-run</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jibx</groupId>
-            <artifactId>jibx-extras</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.stream</groupId>
-            <artifactId>stax-api</artifactId>
-        </dependency>
-
         <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-        </dependency>
-
-        <!-- Various utilities -->
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-test</artifactId>-->
+        <!--</dependency>-->
 
     </dependencies>
 
