Removing unneeded dependencies.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@237 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-cli/pom.xml
+++ b/modules/elastic-grid-cli/pom.xml
@@ -13,7 +13,7 @@
 
     <dependencies>
 
-        <!-- Elastic Cluster Manager dependencies -->
+        <!-- Elastic Grid Manager dependencies -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-manager</artifactId>
