--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -21,7 +21,14 @@
             <version>${pom.version}</version>
         </dependency>
 
-        <!-- Elastic Gruid core -->
+        <!-- Elastic Grid model -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-model</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
+        <!-- Elastic Grid core -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-core</artifactId>
@@ -40,14 +47,6 @@
             <groupId>com.google.code.typica</groupId>
             <artifactId>typica</artifactId>
         </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-        </dependency>
         <!-- Amazon S3 integration -->
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
@@ -55,10 +54,6 @@
         </dependency>
 
         <!-- Jini 2.1 dependencies -->
-        <dependency>
-            <groupId>net.jini</groupId>
-            <artifactId>jsk-lib</artifactId>
-        </dependency>
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
@@ -79,10 +74,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-        </dependency>        
 
     </dependencies>
 
