--- a/modules/elastic-grid-ui/pom.xml
+++ b/modules/elastic-grid-ui/pom.xml
@@ -13,7 +13,7 @@
 
     <dependencies>
 
-        <!-- Elastic Cluster Manager dependencies -->
+        <!-- Elastic Grid Manager dependencies -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-manager</artifactId>
