--- a/modules/private-lan-provisioner/pom.xml
+++ b/modules/private-lan-provisioner/pom.xml
@@ -14,17 +14,17 @@
 
     <dependencies>
 
-        <!-- Elastic Cluster manager -->
+        <!-- Elastic Grid manager -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-manager</artifactId>
             <version>${pom.version}</version>
         </dependency>
 
-        <!-- Elastic Grid Utils -->
+        <!-- Elastic Grid model -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-utils</artifactId>
+            <artifactId>elastic-grid-model</artifactId>
             <version>${pom.version}</version>
         </dependency>
 
@@ -48,10 +48,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
         </dependency>
 
     </dependencies>
