Readded deps that should not have been removed (because of cloud bursting and the EC2 platform).
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@239 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -47,6 +47,14 @@
             <groupId>com.google.code.typica</groupId>
             <artifactId>typica</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+        </dependency>
         <!-- Amazon S3 integration -->
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
