Trying to fix site build.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@240 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-model/pom.xml
+++ b/modules/elastic-grid-model/pom.xml
@@ -91,7 +91,7 @@
                 <configuration>
                     <threshold>Normal</threshold>
                     <effort>Max</effort>
-                    <excludeFilterFile>src/main/conf/findbugs-exclude.xml</excludeFilterFile>
+                    <excludeFilterFile>${basedir}/src/main/conf/findbugs-exclude.xml</excludeFilterFile>
                 </configuration>
             </plugin>
         </plugins>
