--- a/modules/amazon-ec2-bootstrapper/pom.xml
+++ b/modules/amazon-ec2-bootstrapper/pom.xml
@@ -69,7 +69,7 @@
                 <configuration>
                     <threshold>Normal</threshold>
                     <effort>Max</effort>
-                    <excludeFilterFile>src/main/conf/findbugs-exclude.xml</excludeFilterFile>
+                    <excludeFilterFile>${basedir}/src/main/conf/findbugs-exclude.xml</excludeFilterFile>
                 </configuration>
             </plugin>
         </plugins>
