--- a/substrates/pom.xml
+++ b/substrates/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>1.6-RC-3</version>
+            <version>1.6.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- Tests dependencies -->
