git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@246 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <modules>
         <module>modules</module>
         <module>substrates</module>
-        <module>examples</module>
+        <!--module>examples</module-->
 		<module>applications</module>
 		<module>platforms</module>
     </modules>
