EG-44: Relay OAR uploads to S3. Should we working but needs to be improved so that the bucket where the OAR is uploaded is set dynamically. In order to test, simply start EG and connect to http://localhost:8182/eg/rio/applications and use the form in order to upload the OAR (which will be deployed because of the scanned S3 bucket).
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@248 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -103,6 +103,11 @@
         </dependency>
         <dependency>
             <groupId>org.restlet</groupId>
+            <artifactId>org.restlet.ext.freemarker</artifactId>
+            <version>${restlet-release-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.restlet</groupId>
             <artifactId>org.restlet.ext.wadl</artifactId>
             <version>${restlet-release-version}</version>
         </dependency>
@@ -126,6 +131,11 @@
 			<artifactId>cglib</artifactId>
 			<version>2.1_3</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
 
         <!-- Rio dependencies -->
         <dependency>
